<resources>
    <string name="app_name">Walk2Gether</string>

    <string name="login_username">Username</string>
    <string name="login_password">Password</string>

    <string name="button_login">Login</string>
    <string name="button_register">Register</string>

    <string name="loading">Loading ...</string>

    <string name="create_group_create">Create group</string>
    <string name="create_group_back">Back</string>
    <string name="create_group_Name">Name of group</string>

    <string name="title_activity_maps">Map mappinky map</string>
</resources>
