<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/login_textView_password" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/login_textView_name" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
            android:autofillHints="" android:hint="@string/login_password" android:text="a"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/login_textView_name" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp" android:autoText="false"
            android:autofillHints="" android:hint="@string/login_username" android:text="a"/>
    <Button
            android:text="@string/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_button_login"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_textView_password"
            app:layout_constraintStart_toEndOf="@+id/login_button_register" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:onClick="onClickLogin"/>

    <Button
            android:text="@string/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_button_register" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_textView_password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="16dp" android:layout_marginStart="16dp" android:onClick="onClickRegister"/>
</android.support.constraint.ConstraintLayout>