<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".CreateGroupActivity">

    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:text="@string/create_group_create" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:layout_marginRight="24dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" android:onClick="onClickCreateGroup"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/textView_nameGroup" android:layout_marginTop="24dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:hint="@string/create_group_Name"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button2" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent" android:text="@string/create_group_back"
            android:onClick="onClickBack"/>
</android.support.constraint.ConstraintLayout>